@@ -67,6 +67,16 @@ Added analyses/mrcal-convert-lensmodel-from-kalibr-fov
 <2025-07-04 Fri> compute_chessboard_corners() has image_path_prefix and
 image_directory To provide more options for interpreting paths in corners.vnl
 
+<2025-08-24 Sun> Added mrcal_cameramodel_converter is a "converter" function
+that can be used with "O&" conversions in PyArg_ParseTupleAndKeywords() calls.
+Can interpret either path strings or mrcal.cameramodel objects as
+mrcal_cameramodel_t structures. This adds a dependency on
+  - nm           (binutils package)
+  - llvm-objcopy ("llvm" package)
+  Probably I just broke cross-building since I'll probably need a special nm for
+  that
+
+
 * Migration notes 2.4 -> 3.0
 
 2024-12-06 compose_r(), compose_rt(), compose_Rt() have new args:
